RESOLVED FIXED179199
[Curl] Fix cancellation process implementation
https://bugs.webkit.org/show_bug.cgi?id=179199
Summary [Curl] Fix cancellation process implementation
Basuke Suzuki
Reported 2017-11-02 14:16:24 PDT
A proper cleanup is required with some situation and that part was missing.
Attachments
patch (5.81 KB, patch)
2017-11-02 15:05 PDT, Basuke Suzuki
no flags
patch (5.78 KB, patch)
2017-11-02 15:08 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2017-11-02 15:05:44 PDT
Build Bot
Comment 2 2017-11-02 15:07:37 PDT
Attachment 325772 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Basuke Suzuki
Comment 3 2017-11-02 15:08:35 PDT
WebKit Commit Bot
Comment 4 2017-11-02 23:05:36 PDT
Comment on attachment 325775 [details] patch Clearing flags on attachment: 325775 Committed r224386: <https://trac.webkit.org/changeset/224386>
WebKit Commit Bot
Comment 5 2017-11-02 23:05:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-11-15 12:20:49 PST
Note You need to log in before you can comment on or make changes to this bug.