[Curl] Fix cancellation process implementation https://bugs.webkit.org/show_bug.cgi?id=179199

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2017-11-02
Reviewed by Alex Christensen.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::cancel):
(WebCore::CurlRequest::willSendData):
(WebCore::CurlRequest::didReceiveHeader):
(WebCore::CurlRequest::didReceiveData):
(WebCore::CurlRequest::completeDidReceiveResponse):
(WebCore::CurlRequest::pausedStatusChanged):
* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::isSyncRequest const):
(WebCore::CurlRequest::isCompletedOrCancelled const):
(WebCore::CurlRequest::needToInvokeDidCancelTransfer const):
(WebCore::CurlRequest::isSyncRequest): Deleted.

Canonical link: https://commits.webkit.org/195324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224386 268f45cc-cd09-0410-ab3c-d52691b4dbfc